# pick-up

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  docker-compose.dev.yml  docker-compose.yml  pickup_architecture_html_interactive.html  pickup_rust_rn_source_tree.html
docs/: architecture.md  p1-api-gateway.md  p1-auth-service.md  p1-court-service.md  p1-database-schema.md  p1-external-integrations.md  p1-game-service.md  p1-mobile-app.md  p1-overview.md  p1-payment-service.md
docs/pr-reviews/: 2026-04-30-server-foundation.md  README.md  _TEMPLATE.md
scripts/: init-mc.sh
server/: .env.example  Cargo.toml  Dockerfile
server/migrations/: 20260430000001_initial.sql  20260430000002_add_email_to_users.sql  20260430000003_add_password_hash_to_users.sql  20260501000000_game_constraints.sql  20260501000001_fix_constraints.sql  20260501000002_create_haversine_fn.sql
server/postman/: PickUpCollection.json
server/src/: lib.rs  main.rs  state.rs
server/src/config/: mod.rs  settings.rs
server/src/db/: courts.rs  games.rs  mod.rs  pool.rs  redis_pool.rs  users.rs
server/src/error/: app_error.rs  mod.rs
server/src/extractors/: auth.rs  mod.rs  validated.rs
server/src/jobs/: email.rs  mod.rs
server/src/middleware/: auth.rs  cors.rs
server/src/models/: court.rs  game.rs  mod.rs  otp.rs  payment.rs  query.rs  upload.rs  user.rs
server/src/routes/: auth.rs  courts.rs  games.rs  health.rs  mod.rs  payments.rs  upload.rs  webhooks.rs
server/src/services/: auth.rs  bill_split.rs  court.rs  game.rs  mod.rs  payment.rs  upload.rs
server/src/ws/: lobby.rs
