[package]
name = "pickup-server"
version = "0.1.0"
edition = "2021"
description = "PickUp — Sports court booking, pickup games & bill splitting"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["ws", "macros", "json"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tower = "0.5"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "macros",
] }

# Redis (OTP, rate limiting, future caching)
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Auth
jsonwebtoken = "9"
tower-cookies = "0.10"
lettre = { version = "0.11", features = ["tokio1-native-tls", "smtp-transport", "builder"] }
tokio-native-tls = "0.3"
argon2 = "0.5"
hex = "0.4"
rand = "0.8"
constant_time_eq = "0.3"
urlencoding = "2"

# Types & utilities
uuid = { version = "1", features = ["v7", "v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"

# Validation
validator = { version = "0.20", features = ["derive"] }

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Config
dotenvy = "0.15"

# S3/MinIO
aws-config = "1"
aws-sdk-s3 = "1"
aws-credential-types = "1"
aws-types = "1"

[dev-dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono"] }
axum-test = "16"
